[package]
name = "kivi"
version = "0.1.0"
edition = "2021"
description = "A simple key-value database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Frojdholm/kivi"
keywords = ["database", "btree"]
categories = ["database-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
